# ayaka

./: .env  .gitignore  ayaka_test_extension.py  bot.py  cbot.py  mkdocs.yml  pyproject.toml  readme.md  run.py  run2.py  t.py
ayaka/: __init__.py  bridge.py  cat.py  config.py  context.py  database.py  download.py  event.py  exception.py  helpers.py  init_ctrl.py  logger.py  manager.py  master.py  model.py  orm.py  playwright.py  session.py  subscribe.py  trigger.py
ayaka/adapters/: __init__.py  adapter.py  console.py  detect.py  gocq.py  hoshino.py  model.py  nb1.py  nb2ob11.py  nonebot1.py  onebot.py  readme.md
ayaka/adapters/nb1/: hoshino.py  nb1.py
ayaka/adapters/nb2/: ob11.py  qqguild_patch.py
ayaka/adapters/nonebot2/: onebot.py
ayaka/core/: __init__.py  cat.py  cat_block.py  context.py  database.py  exception.py  session.py  subscribe.py  trigger.py
docs/: 404.html  index.html  sitemap.xml
docs/cache/: index.html
docs/change-log/: index.html
docs/config/: index.html
docs/database/: index.html
docs/dev/cache/: index.html
docs/dev/config/: index.html
docs/dev/database/: index.html
docs/dev/disable/: index.html
docs/dev/on/: index.html
docs/dev/overtime/: index.html
docs/dev/plugin/: index.html
docs/dev/property/: index.html
docs/dev/test/: index.html
docs/disable/: index.html
docs/example/cache/: index.html
docs/example/collision/: index.html
docs/example/example/: index.html
docs/install/: index.html
docs/list/: index.html
docs/on/: index.html
docs/property/: index.html
docs/quickstart/: index.html
docs/quickstart/cache/: index.html
docs/quickstart/collision/: index.html
docs/quickstart/example/: index.html
docs/search/: search_index.json
docs/test/: index.html
example/: __init__.py  input.py  muyu.py  stone.py
plugins/: 星际旅行.py
script/: 0.txt  input.txt  muyu.txt  stone.txt
website/: cache.md  change-log.md  config.md  database.md  disable.md  index.md  install.md  list.md  on.md  property.md  quickstart.md  test.md
website/dev/: cache.md  config.md  database.md  on.md  overtime.md  plugin.md  property.md  test.md
website/example/: cache.md  collision.md
website/quickstart/: collision.md  example.md
