[tool.poetry]
name = "ayaka"
version = "0.0.4.2b5"
description = "猫猫，猫猫！"
authors = ["Su <wxlxy316@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://bridgel.github.io/ayaka/"
repository = "https://github.com/bridgeL/ayaka"
packages = [
    { include = "ayaka" }
]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=1.10.0"
loguru = ">=0.6.0"
sqlmodel = ">=0.0.8"
inflection = ">=0.5.1"
fastapi = ">=0.87.0,!=0.89.0,<1.0.0"
httpx = ">=0.20.0,<1.0.0"
uvicorn = { version = ">=0.20.0,<1.0.0", extras = ["standard"] }
ayaka-utils = "^0.0.3"

nonebot2 = {version = ">=2.0.0b5", optional = true}
nonebot-adapter-onebot = {version = ">=2.2.0", optional = true}


[tool.poetry.extras]
nb2ob11 = ["nonebot2", "nonebot-adapter-onebot"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.nonebot]
plugins = []
plugin_dirs = ["plugins"]
