[tool.poetry]
name = "ayaka"
version = "0.0.4.3a5"
description = "猫猫，猫猫！"
authors = ["Su <wxlxy316@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://bridgel.github.io/ayaka/"
repository = "https://github.com/bridgeL/ayaka"
packages = [
    { include = "ayaka" }
]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=1.10.0"
fastapi = ">=0.87.0,!=0.89.0,<1.0.0"
httpx = ">=0.20.0,<1.0.0"
uvicorn = { version = ">=0.20.0,<1.0.0", extras = ["standard"] }
ayaka-db = "^0.0.1"

nonebot2 = {version = ">=2.0.0b5", optional = true}
nonebot-adapter-onebot = {version = ">=2.2.0", optional = true}
playwright = {version = ">=1.17.2", optional = true}

[tool.poetry.extras]
nb2ob11 = ["nonebot2", "nonebot-adapter-onebot"]
playwright = ["playwright"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.nonebot]
plugins = []
plugin_dirs = ["plugins"]
